# modmaker

./: .bumpversion.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  ATTRIBUTIONS.md  MANIFEST.in  README.md  VERSIONING.md  __init__.py  _cli.py  _cli_core.py  _logger.py  pyproject.toml  setup.cfg  setup.py
.github/: setup_test_env.sh
.github/workflows/: python-publish.yml  version-check.yml
_cli_modules/: __init__.py  create.py  option.py
modmaker/: .gitignore  CONTRIBUTING.md  DESIGN.md  MANIFEST.in  README.md  TESTING.md  __main__.py  _cli.py  _cli_pyenv.py  _common_utils.py  pyproject.toml  setup.cfg  setup.py
modmaker/.github/workflows/: tests.yml
modmaker/_cli_modules/: __init__.py  create.py
modmaker/modmaker/: __init__.py  _cli.py
modmaker/modmaker/templates/cli/tests/: test_cli.py  test_commands.py
modmaker/modmaker/templates/cli/{{PROJECT_NAME}}/: __main__.py  cli.py
modmaker/templates/: __init__.py
modmaker/templates/cli/: __init__.py
modmaker/templates/cli/tests/: __init__.py  test_commands.py
modmaker/templates/cli/{{PROJECT_NAME}}/: __init__.py  commands.py
modmaker/tests/: __init__.py  test_bin_modmaker.py  test_cli.py  test_cli_core.py  test_common_utils.py  test_logger.py
scripts/: check_versions.py  sync_versions.py
templates/cli/: .gitignore  README.md  pyproject.toml
templates/cli/tests/: test_cli.py
templates/cli/{{PROJECT_NAME}}/: cli.py  commands.py
tests/: __init__.py  conftest.py  test_bin_entrypoint.py  test_bin_modmaker.py  test_bin_modmaker_coverage.py  test_create_command.py  test_dummy.py  test_option_command.py
