[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modmaker"
version = "0.1.0"
description = "Python project skeleton generator"
authors = [
    {name = "modmaker authors", email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.scripts]
modmaker = "modmaker._cli:main"

[tool.setuptools]
packages = ["modmaker"]
include-package-data = true