[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modmaker"
version = "0.1.7"
description = "Python project skeleton generator"
authors = [
    {name = "modmaker authors", email = "avattathil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.scripts]
modmaker = "_cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [".", "templates", "templates.*", "_cli_modules", "_cli_modules.*"]
