[metadata]
name = modmaker
version = 0.1.5
description = Python project skeleton generator
author = modmaker authors
author_email = avattathil@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests
python_requires = >=3.9

[options.entry_points]
console_scripts =
    modmaker = _cli:main