[metadata]
name = modmaker
version = 0.1.5
description = Python project skeleton generator
author = modmaker authors
author_email = example@example.com
license = Apache-2.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.7
install_requires =
    requests

[options.entry_points]
console_scripts =
    modmaker = _cli_pyenv:main