[tool.poetry]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "A command-line interface application"
authors = ["{{AUTHOR}} <{{EMAIL}}>"]
readme = "README.md"
license = "{{LICENSE}}"

[tool.poetry.dependencies]
python = "^{{PYTHON_VERSION}}"
click = "^8.1.7"
rich = "^13.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
{{PROJECT_NAME}} = "{{PROJECT_NAME}}.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"